sftpgo/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sftpgo
  namespace: sftpgo
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  serviceName: sftpgo
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
        name: sftpgo
        mariadb-client: "true"
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: medium-priority
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   runAsGroup: 3000
      #   fsGroup: 2000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: sftpgo
        image: drakkan/sftpgo:latest
        imagePullPolicy: Always
        securityContext:
          # allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          # runAsNonRoot: true
          # runAsUser: 1000
          # runAsGroup: 3000
          # seccompProfile:
          #   type: RuntimeDefault
          # capabilities:
          #   drop: ["ALL"]
        resources:
          requests:
            cpu: 1m
            memory: 60Mi
          limits:
            cpu: 120m
            memory: 150Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: nfs-sftpgo-config
          mountPath: /var/lib/sftpgo
        - name: nfs-sftpgo-data
          mountPath: /srv/sftpgo        
      volumes:
      - name: nfs-sftpgo-config
        persistentVolumeClaim:
          claimName: nfs-sftpgo-config
      - name: nfs-sftpgo-data
        persistentVolumeClaim:
          claimName: nfs-sftpgo-data
