sftpgo/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sftpgo
  name: sftpgo-ui
  namespace: sftpgo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: sftpgo


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sftpgo
  name: sftpgo-ftp
  namespace: sftpgo
spec:
  type: ClusterIP
  ports:
  - port: 2022
    protocol: TCP
    targetPort: 2022
    name: ftp
  selector:
    app: sftpgo
