sftpgo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "sftpgo.ucdialplans.com"
  rules:
  - backendRefs:
    - name: sftpgo-ui
      namespace: sftpgo
      kind: Service
      port: 8080
