sftpgo/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  endpointSelector:
    matchLabels:
      app: sftpgo
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            mariadb-client: 'true'
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "3306"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
        - ports:
            - port: "465"
